public class Main {
    public static void main(String[] args) {
        Shape s1 = new Circle(5.5,"red",false);
        

    }
}
